# bms_watch

./: .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
src/bms_watch/: __main__.py  constants.py
src/bms_watch/selenium/: read_website.py
