[build-system]
requires = ["setuptools>=61.0", "virtualenv>=20.24.5", "build>=1.0.3", "twine>=4.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bms_watch"
version = "0.0.1"
description = "Watch if movie is available on BMS."
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "aiohttp==3.9.3",
    "aiohttp-retry==2.8.3",
    "aiosignal==1.3.1",
    "attrs==23.2.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "frozenlist==1.4.1",
    "h11==0.14.0",
    "idna==3.6",
    "multidict==6.0.5",
    "outcome==1.3.0.post0",
    "pycparser==2.21",
    "PyJWT==2.8.0",
    "PySocks==1.7.1",
    "requests==2.31.0",
    "selenium==4.18.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.5",
    "trio==0.24.0",
    "trio-websocket==0.11.1",
    "twilio==9.0.0",
    "typing_extensions==4.10.0",
    "urllib3==2.2.1",
    "wsproto==1.2.0",
    "yarl==1.9.4"
]

[project.urls]
"Homepage" = "https://dev.mystrand.org/cdx-automation/main-repo"
"Bug Tracker" = "https://dev.mystrand.org/cdx-automation/main-repo/-/issues"
